unpackaged/main/default/objects/Stakeholder_Relationship__c/Stakeholder_Relationship__c.object-meta.xml
<CustomObject>
    <label>Stakeholder Relationship</label>
    <nameField>
        <displayFormat>REL-{00000}</displayFormat>
        <label>Stakeholder Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stakeholder Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>