unpackaged/main/default/objects/Stakeholder_Relationship__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Feedback</label>
    <referenceTo>Feedback__c</referenceTo>
    <relationshipLabel>Stakeholder Relationships</relationshipLabel>
    <relationshipName>Stakeholder_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>