unpackaged/main/default/objects/Stakeholder_Relationship__c/fields/Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder__c</fullName>
    <label>Stakeholder</label>
    <referenceTo>Stakeholder__c</referenceTo>
    <relationshipLabel>Stakeholder Relationships</relationshipLabel>
    <relationshipName>Stakeholder_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>