unpackaged/main/default/objects/Stakeholder_Relationship__c/fields/Stakeholder_Role__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Role__c</fullName>
    <description>Used to track what a user group's role is in that particular user story. Requested in FB-3668</description>
    <label>Stakeholder Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Responsible</fullName>
            </value>
            <value>
                <fullName>Accountable</fullName>
            </value>
            <value>
                <fullName>Consulted</fullName>
            </value>
            <value>
                <fullName>Informed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>