unpackaged/main/default/objects/Stakeholder_Relationship__c/validationRules/Lookup_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Lookup_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>(
IF(ISBLANK( User_Story__c ),1,0)
+ IF(ISBLANK( Test_Script__c ),1,0)
+ IF(ISBLANK( Feedback__c ),1,0)
) &lt; 2</errorConditionFormula>
    <errorMessage>This record can only be related to a single User Story, Test Script, or Feedback record.</errorMessage>
</ValidationRule>